<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CarDroidDuinoActivity!</string>
    <string name="app_name">CarDroiDuino</string>
    <string name="btn_control">CONTROLE</string>
    <string name="btn_car">CARRO</string>
    <string name="title_paired_devices">Dispositivos Pareados</string>
    <string name="title_other_devices">Outros Dispositivos</string>
    <string name="btn_scan">Procurar Dispositivos</string>
    <string name="none_paired">Sem Dispositivos pareados</string>
    <string name="select_device">Selecione um Dispositivo</string>
    <string name="none_found">Nenhum dispositivo encontrado</string>
    <string name="scanning">Verificando</string>
    <string name="textConfigServer">Configurações do Servidor do Carrinho</string>
    <string name="textConfigClient">Configurações do Controle</string>
    <string name="textIPAddress">Endereço IP:</string>
    <string name="textPort">Porta:</string>
    <string name="btnSalvar">Salvar</string>

</resources>