<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_weight="1">
		
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewConfigServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textConfigServer"
                android:background="#7D7D7D"
                android:textColor="#000000"/>
            
            <TextView
                android:id="@+id/textViewIPServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textIPAddress"/>
            
            <EditText
                android:id="@+id/txtIPServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:inputType="text">
            </EditText>
            
            <TextView
                android:id="@+id/textViewPortServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textPort"/>
            
            <EditText
                android:id="@+id/txtPortServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" >
            </EditText>
            	
            <TextView
                android:id="@+id/textViewConfigClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textConfigClient"
                android:background="#7D7D7D"
                android:textColor="#000000"/>
            
            <TextView
                android:id="@+id/textViewIPClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textIPAddress"/>
            
            <EditText
                android:id="@+id/txtIPClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:inputType="text">
            </EditText>
            
            <TextView
                android:id="@+id/textViewPortClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textPort"/>
            
            <EditText
                android:id="@+id/txtPortClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:inputType="number">
            </EditText>
            
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSalvar" />

</LinearLayout>